# aiootp

./: .gitignore  CHANGES.rst  CHECKSUMS.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.rst  LICENSE  MANIFEST.in  PREADME.rst  README.rst  SECURITY.md  SIGNATURE.txt  SIGNATURES.txt  pyproject.toml  ruff.toml  setup.cfg  setup.py  sha256_ROOT_CHECKSUM.sig  sha256_ROOT_CHECKSUM.txt  sha512_ROOT_CHECKSUM.sig  sha512_ROOT_CHECKSUM.txt  sign_package_build.py  sign_package_service.py
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: linux-pypi-release-tests.yml  linux-pypi-release.yml  linux-python-app.yml  macos-pypi-release-tests.yml  macos-pypi-release.yml  macos-python-app.yml  pyre.yml  python-app.yml  windows-pypi-release-tests.yml  windows-pypi-release.yml  windows-python-app.yml
aiootp/: __aiocontext.py  __async_lru.py  __datasets.py  __init__.py  __ui_coordination.py  _containers.py  _debug_control.py  _debuggers.py  _exceptions.py  _gentools.py  _paths.py  _typing.py  asynchs.py  ciphers.py  commons.py  databases.py  debuggers.py  generics.py  gentools.py  keygens.py  paths.py  randoms.py
aiootp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aiootp/__ciphers/: __init__.py  base_classes.py  chunky2048.py
aiootp/__constants/: __init__.py  chunky2048.py  datasets.py  misc.py  passcrypt.py  slick256.py
aiootp/__dependencies/: __init__.py  aiocontext.py  async_lru.py
aiootp/__engagement/: __init__.py  _report_security_issue.py  issue_reporting.py
aiootp/_constants/: __init__.py  datasets.py  misc.py
aiootp/_permutations/: __init__.py  affine_permutation.py  affine_permutation_config.py  affine_xor_chain.py  affine_xor_chain_config.py  fast_affine_xor_chain.py
aiootp/_typing/: __init__.py  _asynchs.py  _ciphers.py  _commons.py  _databases.py  _generics.py  _keygens.py  _paths.py  _permutations.py  _randoms.py  interface.py  tuples.py
aiootp/asynchs/: __init__.py  aos.py  clocks.py  concurrency_guard.py  concurrency_interface.py  guard_manager.py  loops.py  processes.py  threads.py
aiootp/asynchs/guards/: __init__.py  concurrency_guard.py  manager.py  policies.py  state_machine.py
aiootp/ciphers/: __init__.py  chunky_2048.py  chunky_2048_config.py  cipher_interface.py  cipher_kdfs.py  cipher_stream_properties.py  cipher_streams.py  ciphertext_formatting.py  decipher_streams.py  dual_output_shake_cipher.py  dual_output_shake_cipher_config.py  key_bundle.py  padding.py  shake_permute_cipher.py  shake_permute_cipher_config.py  slick_256.py  slick_256_config.py  stream_hmac.py  stream_junction.py  synthetic_iv.py
aiootp/commons/: __init__.py  configs.py  instances.py  namespaces.py  packaging.py  slots.py  typed_slots.py
aiootp/databases/: README_DATABASES.rst  __init__.py  async_database.py  database_properties.py  dbdomains.py  dbkdf.py  profile_tokens.py  sync_database.py
aiootp/db/: README_DATABASES.rst
aiootp/generics/: __init__.py  byte_io.py  canon.py  domains.py  hashing.py  transform.py
aiootp/keygens/: __init__.py  domain_kdf.py  mnemonics.py  package_signer.py  package_signing.py  package_verifier.py
aiootp/keygens/curve_25519/: __init__.py  adapter.py  double_diffie_hellman_client.py  double_diffie_hellman_server.py  ed25519.py  shared_interface.py  triple_diffie_hellman_client.py  triple_diffie_hellman_server.py  x25519.py
aiootp/keygens/passcrypt/: __init__.py  config.py  hash_format.py  interface.py  session_init.py  sessions_manager.py
aiootp/randoms/: __init__.py  _early_salts.py  entropy_daemon.py  rng.py  simple.py  threading_safe_entropy_pool.py
aiootp/randoms/ids/: __init__.py  guid.py  guid_config.py  raw_guid.py  raw_guid_config.py  sequence_id.py  sequence_id_config.py
aiootp/tor/: README_TOR.rst
tests/: all_aiootp_tests.py  all_asynchs_tests.py  all_ciphers_tests.py  all_commons_tests.py  all_databases_tests.py  all_debug_control_tests.py  all_exceptions_tests.py  all_generics_tests.py  all_gentools_tests.py  all_keygens_tests.py  all_paths_tests.py  all_permutations_tests.py  all_randoms_tests.py  all_test_framework_tests.py  all_typing_tests.py  all_zzz_time_to_live_tests.py  chunky_2048_test_vectors.py  conftest.py  hypothesis_strategies.py  init_tests.py  passcrypt_test_vectors.py  pytest.ini  slick_256_test_vectors.py  test_ByteIO.py  test_BytesIO.py  test_Clock.py  test_Comprende.py  test_ConcurrencyGuard.py  test_Database_AsyncDatabase.py  test_DebugControl.py  test_GUID.py  test_MultiConcurrencyGuard.py  test_PackageSigner.py  test_Padding.py  test_Passcrypt.py  test_Processes_Threads.py  test_RawGUID.py  test_Ropake.py  test_SequenceID.py  test_StreamHMAC.py  (+36 more)
