[build-system]
requires = ["setuptools>=72.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"


[project]
name = "aiootp"
version = "0.23.12"
description = "a high-level async cryptographic anonymity library to scale, simplify, & automate privacy best practices for secure data & identity processing, communication, & storage."
readme = "README.rst"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.8"
dependencies = ["aiofiles>=23.2.1", "cryptography>=42.0.8"]
authors = [
    {name = "Ricchi Machado", email = "rmlibre@riseup.net"},
    {name = "Gonzo Investigative Journalism Agency, LLC", email = "gonzo.development@protonmail.ch"}
]
maintainers = [
    {name = "Ricchi Machado", email = "rmlibre@riseup.net"}
]
urls = {"Homepage" = "https://twitter.com/aiootp", "Download" = "https://pypi.org/project/aiootp", "Source" = "https://github.com/rmlibre/aiootp", "Repository" = "https://github.com/rmlibre/aiootp.git", "Tracker" = "https://github.com/rmlibre/aiootp/issues", "Changelog" = "https://github.com/rmlibre/aiootp/blob/main/CHANGES.rst", "Documentation" = "https://github.com/rmlibre/aiootp/blob/main/README.rst"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Natural Language :: English",
    "Operating System :: Other OS",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Database",
    "Topic :: Education",
    "Topic :: Utilities",
    "Topic :: Communications",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Topic :: System :: Archiving",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: System :: Networking",
    "Topic :: System :: Filesystems",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering",
    "Topic :: Communications :: Email",
    "Topic :: Security :: Cryptography",
    "Topic :: Office/Business :: Financial",
    "Topic :: Communications :: File Sharing",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3"
]
keywords = [
    "xor",
    "key",
    "salt",
    "pepper",
    "nonce",
    "aad",
    "iv",
    "siv",
    "resuse",
    "misuse",
    "robust",
    "fully",
    "context",
    "committing",
    "commitment",
    "online",
    "AEAD",
    "auth",
    "authenticated",
    "authentication",
    "shmac",
    "hmac",
    "nmac",
    "mac",
    "digest",
    "integrity",
    "infosec",
    "opsec",
    "appsec",
    "privacy",
    "engineering",
    "stream",
    "block",
    "cipher",
    "permutation",
    "chunky2048",
    "slick256",
    "encrypt",
    "plaintext",
    "decrypt",
    "ciphertext",
    "passcrypt",
    "passphrase",
    "PBKDF",
    "password",
    "based",
    "derivation",
    "function",
    "3dh",
    "2dh",
    "25519",
    "x25519",
    "ed25519",
    "curve25519",
    "diffie",
    "hellman",
    "sign",
    "signature",
    "verify",
    "verification",
    "db",
    "database",
    "value",
    "store",
    "user",
    "uuid",
    "unique",
    "guid",
    "global",
    "transparent",
    "encryption",
    "decryption",
    "indistinguishable",
    "indistinguishability",
    "pseudo",
    "one",
    "time",
    "pad",
    "onetimepad",
    "canonical",
    "canonicalization",
    "domain",
    "separation",
    "KDF",
    "bit",
    "bits",
    "hash",
    "sha",
    "sha3",
    "sha-3",
    "keccak",
    "ephemeral",
    "byte",
    "entropy",
    "PRF",
    "PRG",
    "PRP",
    "RNG",
    "PRNG",
    "CSPRNG",
    "cryptographically",
    "secure",
    "random",
    "number",
    "generator",
    "bitwise",
    "operations",
    "IND",
    "CCA",
    "CPA",
    "RUP",
    "information",
    "cyber",
    "security",
    "active",
    "passive",
    "adaptive",
    "chosen",
    "attack",
    "resistance",
    "resistant",
    "tweak",
    "tweakable",
    "anonymous",
    "anonymity",
    "pseudonymous",
    "symmetric",
    "asymmetric",
    "communications",
    "utilities",
    "simple",
    "clean",
    "code",
    "crypto",
    "cryptology",
    "cryptography",
    "cryptanalysis",
    "beta",
    "testing",
    "data",
    "science",
    "multi",
    "processing",
    "threading",
    "await",
    "async",
    "asyncio",
    "parallel",
    "concurrency",
    "coroutine",
    "coroutines",
    "asynchronous",
    "asynchrony"
]


[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.5.0"
]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.5.0",
    "twine>=5.1.1"
]


[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
package-dir = {"" = "aiootp"}


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/.pytest_cache"
doctest_optionflags = ["IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]
addopts = [
    "--verbose",
    "--ignore=setup.py",
    "--ignore=docs/*",
    "--ignore=aiootp/db/*",
    "--ignore=aiootp/tor/*"
]
