[metadata]
name = aiootp
license_file = LICENSE
download_url = https://pypi.org/project/aiootp/
project_urls =
    Source = https://github.com/rmlibre/aiootp
    Tracker = https://github.com/rmlibre/aiootp/issues
    Changelog = https://github.com/rmlibre/aiootp/blob/master/CHANGES.rst
    Documentation = https://github.com/rmlibre/aiootp/blob/master/README.rst

[flake8]
max-line-length = 72
exclude = tests/*
max-complexity = 15

[tool:pytest]
testpaths = tests
addopts = --verbose
    --ignore=setup.py --ignore=docs/*
doctest_optionflags = IGNORE_EXCEPTION_DETAIL ELLIPSIS

