[metadata]
name = aiootp
license_file = LICENSE
download_url = https://pypi.org/project/aiootp/
project_urls =
    Source = https://github.com/rmlibre/aiootp
    Tracker = https://github.com/rmlibre/aiootp/issues
    Changelog = https://github.com/rmlibre/aiootp/blob/master/CHANGES.rst
    Documentation = https://github.com/rmlibre/aiootp/blob/master/README.rst

[flake8]
exclude = tests/*
max-complexity = 15
max-line-length = 72

[tool:pytest]
testpaths = tests
doctest_optionflags = IGNORE_EXCEPTION_DETAIL ELLIPSIS
addopts =
    --verbose
    --ignore=setup.py
    --ignore=docs/*
    --ignore=aiootp/tor/*

